# Marching-Tetrahedra

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
include/: Log.hpp  LookupTable.h  MarchingTet.h  VTKFileManager.h  VTKGrid.h  ggl.h
res/: critical_points1.vtp  vtu_maxlabel.vtp  vtu_redu.py
res/fixed_labeled_at_zfp/: fix_state.pvsm
res/labeled_at2/: labeled_at2_state.pvsm
res/labeled_at_sz3/: labeled_at_sz3_maxlabel_critical_points.vtp  labeled_at_sz3_maxlabel_smooth.vtp  labeled_at_sz3_minlabel_critical_points.vtp  sz3_state.pvd
res/labeled_at_zfp/: labeld_zfp_state.pvsm  labeled_at_zfp_maxlabel_critical_points.vtp  labeled_at_zfp_maxlabel_smooth.vtp
src/: LookupTable.cpp  MarchingTet.cpp  VTKFileManager.cpp  VTKGrid.cpp  main.cpp
